加入显示天气信息的功能

--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="right"
+        android:gravity="end"
         android:textColor="#fff"/>
 
     <!-- 显示最低温度 -->
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="right"
+        android:gravity="end"
         android:textColor="#fff"/>
 
 </LinearLayout>
